--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,35 +41,47 @@
 
         <Button
             android:id="@+id/button1"
-            android:text="1"
-            android:textSize="24sp"
+            android:gravity="center"
+            android:onClick="GO"
+            android:textSize="10sp"
             android:textStyle="bold"
+            android:visibility="visible"
             app:layout_columnWeight="1"
-            app:layout_rowWeight="1" />
+            app:layout_rowWeight="1"
+            android:tag="0"/>
 
         <Button
             android:id="@+id/button2"
-            android:text="2"
-            android:textSize="24sp"
+            android:gravity="center"
+            android:onClick="GO"
+            android:textSize="10sp"
             android:textStyle="bold"
+            android:visibility="visible"
             app:layout_columnWeight="1"
-            app:layout_rowWeight="1" />
+            app:layout_rowWeight="1"
+            android:tag="1"/>
 
         <Button
             android:id="@+id/button3"
-            android:text="3"
-            android:textSize="24sp"
+            android:gravity="center"
+            android:onClick="GO"
+            android:textSize="10sp"
             android:textStyle="bold"
+            android:visibility="visible"
             app:layout_columnWeight="1"
-            app:layout_rowWeight="1" />
+            app:layout_rowWeight="1"
+            android:tag="2"/>
 
         <Button
             android:id="@+id/button4"
-            android:text="4"
-            android:textSize="24sp"
+            android:gravity="center"
+            android:onClick="GO"
+            android:textSize="10sp"
             android:textStyle="bold"
+            android:visibility="visible"
             app:layout_columnWeight="1"
-            app:layout_rowWeight="1" />
+            app:layout_rowWeight="1"
+            android:tag="3"/>
     </androidx.gridlayout.widget.GridLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
